BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Cycle_Plan_Detail_vod__c.object
<CustomObject>
    <description>For each Cycle_Plan_Target, it will hold the number of planned and actual interactions, per product.</description>
    <fields>
        <fullName>Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of actual details made for the account-product combination. This field will be updated automatically as details are made.</description>
        <label>Actual Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <formula>IF(Planned_Details_vod__c &gt; 0, Actual_Details_vod__c/Planned_Details_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Target_vod__c</fullName>
        <description>The Cycle Plan target against which the Details are made.</description>
        <label>Target</label>
        <referenceTo>Cycle_Plan_Target_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date_BMS_CA__c</fullName>
        <formula>Cycle_Plan_Target_vod__r.Cycle_Plan_vod__r.End_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Attainment_BMS_CA__c</fullName>
        <formula>IF ( TODAY() &gt;= End_Date_BMS_CA__c , 1, 
IF ( TODAY() &lt; Start_Date_BMS_CA__c, 0, 
(TODAY() - Start_Date_BMS_CA__c) / (End_Date_BMS_CA__c - Start_Date_BMS_CA__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Calls_BMS_CA__c</fullName>
        <formula>Expected_Attainment_BMS_CA__c *  Planned_Details_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Dec-2013: external ID used to load data</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HQ_Details_BMS__c</fullName>
        <label>HQ Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Over_Calls_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013: New formula field to calculate the number of calls Submitted over the Objective. To be used from reports.</description>
        <formula>Actual_Details_vod__c - Planned_Details_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over-Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of planned details for the account-product combination. This field will generally be data loaded.</description>
        <label>Planned_Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_vod__c</fullName>
        <description>Indicates the detailing priority for the targeted product.</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Catalog</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_vod__c</fullName>
        <description>The remaining number of calls the user must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Planned_Details_vod__c ),ISBLANK(Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Actual_Details_vod__c) ,Planned_Details_vod__c 
                      , IF(ISBLANK(Planned_Details_vod__c ),0
                            , IF((Planned_Details_vod__c -Actual_Details_vod__c)&gt;=0,
                                     Planned_Details_vod__c -Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the user against the Cycle Plan Target.</description>
        <label>Scheduled Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_BMS_CA__c</fullName>
        <formula>Cycle_Plan_Target_vod__r.Cycle_Plan_vod__r.Start_Date_vod__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of actual details made for the product against a Cycle Plan Target by the team of representatives.</description>
        <label>Actual Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attainment_vod__c</fullName>
        <description>It holds the overall product detail attainment across the team for the product against a Cycle Plan Target.</description>
        <formula>IF( Total_Planned_Details_vod__c &gt; 0,  Total_Actual_Details_vod__c / Total_Planned_Details_vod__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product planned by the team of representatives against the Cycle Plan Target.</description>
        <label>Planned Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_vod__c</fullName>
        <description>The remaining number of calls the team must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Total_Planned_Details_vod__c ),ISBLANK(Total_Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Total_Actual_Details_vod__c) ,Total_Planned_Details_vod__c 
                      , IF(ISBLANK(Total_Planned_Details_vod__c ),0
                            , IF((Total_Planned_Details_vod__c -Total_Actual_Details_vod__c)&gt;=0,
                                     Total_Planned_Details_vod__c -Total_Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the team of representatives against the Cycle Plan Target.</description>
        <label>Scheduled Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Cycle_Plan_Target_vod__r.Cycle_Plan_vod__r.Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_PM_Rep_Rating_BMS_CA__c</fullName>
        <label>Rep Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zvod_PM_Segmentation_1_BMS_CA__c</fullName>
        <label>Segmentation 1</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zvod_PM_System_Rating_BMS_CA__c</fullName>
        <label>System Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zvod_PM_Tier_BMS_EMEA__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Cycle Plan Detail</label>
    <nameField>
        <displayFormat>CPD-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PlannedDetailsLessThan0</fullName>
        <active>true</active>
        <description>Planned Details can not be less than 0.</description>
        <errorConditionFormula>Planned_Details_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Actual_Details_vod__c</errorDisplayField>
        <errorMessage>Planned Details can not be less than 0.</errorMessage>
    </validationRules>
</CustomObject>